    the style of all other Blackfin parts.
  * src/bus/bf533_stamp.c (bf533_stamp_bus_new): Update signal names.
  * src/bus/bf537_stamp.c (bf537_stamp_bus_new): Likewise.

  * data/analog/bf548/bf548: Change "PORTX_#" to "PX#" signals to match the
    style of all other Blackfin parts.
  * src/bus/bf548_ezkit.c (bf548_ezkit_bus_new): Update signal names.

2010-08-30  Mike Frysinger  <vapier@gentoo.org>

  * configure.ac: Clean up libusb detection to prefer 1.0 over 0.1, and accept
    whatever pkg-config tells us.  Also allow libusb-1.0 + ftdi w/out async
    since it isn't required for things to work.

  * src/svf/svf_flex.l: Have align_string return the length of the string to
    the caller, and have the callers re-use that.  This avoids useless overhead
    of calling strlen() over and over.  Fix by Frans Meulenbroeks.

  * src/svf/svf_flex.l (fix_yylloc): Accept the string length from caller to
    avoid useless overhead of calling strlen().  Fix by Frans Meulenbroeks.

  * src/svf/svf_flex.l: Use memcpy() rather than strcpy() when we already know
    the length and we just want to dupe the string.

  * src/svf/svf_bison.y: Avoid calling strlen() multiple times on the same
    string.  Fix by Frans Meulenbroeks.

  * src/svf/svf_bison.y: Use known string length to call strcpy() rather than
    strcat().  This avoids having to rescan for the end of the string.  Fix by
    Frans Meulenbroeks.

  * src/svf/svf_bison.y: Avoid further overhead by using memcpy() with all
    known lengths rather than strcpy().

  * src/tap/cable/vsllink.c (vsllink_init): Convert libusb-0.x API to newer
    libusb-1.x API.
  * src/tap/usbconn/libusb.h: Glue a few more libusb-0.x API defines to newer
    libusb-1.x API defines.  Add errors for some libusb-0.x API functions to
    catch problems in the future.

2010-08-26  Mike Frysinger  <vapier@gentoo.org>

  * src/tap/cable/gpio.c: Rewrite to use raw file descriptors when working with